--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     <h1 class="pc">PC</h1>
     <h1 class="tablet">Tablet</h1>
     <h1 class="mobile">Mobile</h1>
-    <table id="courses">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Description</th>
-        </tr>
-    </table>
+    <div id="container">
+        <ul id="courses"></ul>
+        <div class="form">
+            <div class="item">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name">
+            </div>
+            <div class="item">
+                <label for="description">Description</label>
+                <textarea name="description" id="description" cols="30" rows="10"></textarea>
+            </div>
+            <div class="item submit">
+                <button id="create-btn" onclick="handleCreateCourse()">Create</button>
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
