responsive flex layout

--- a/index.html
+++ b/index.html
@@ -8,25 +8,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="pc">PC</h1>
-    <h1 class="tablet">Tablet</h1>
-    <h1 class="mobile">Mobile</h1>
-    <div id="container">
-        <ul id="courses"></ul>
-        <div class="form">
-            <div class="item">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name">
+    <div class="main">
+        <a href="rest-api.html">Rest API</a>
+        <div class="main__product">
+            <img class="main__product_img" src="./product.jpg" alt="hinh-anh-san-pham" />
+            <div class="main__product_info">
+                <h1 class="main__product_name">Bàn Phím Cơ Máy Tính Crack K2 PRO Led RGB 10 Chế Độ Khác Nhau, Chơi Game Dùng Văn Phòng Cực Đã</h1>
+                <h3 class="main__product_price">
+                    ₫389.000 - ₫419.000
+                </h3>
+                <p class="main__product_desc">
+                    Để chỉnh chế độ led các bạn nhấn đồng thời FN + ScrLK ( hoặc SL nếu có )
+
+                    Trong năm 2021 này XSmart đã chuyển sang bán phiên bản nâng cấp với điểm update là : thêm logo led trên bàn phím và nâng cấp độ chắc chắn của bàn phím
+                </p>
             </div>
-            <div class="item">
-                <label for="description">Description</label>
-                <textarea name="description" id="description" cols="30" rows="10"></textarea>
+        </div>
+        <div class="main__categories_courses">
+            <div class="main__categories">
+                <h2 class="title">Category</h2>
+                <ul class="cate_list">
+                    <li class="cate_item"><a href="https://www.w3schools.com/js/default.asp" target="_blank"">Javascript</a></li>
+                    <li class="cate_item"><a href="https://www.w3schools.com/html/default.asp" target="_blank"">HTML</a></li>
+                    <li class="cate_item"><a href="https://www.w3schools.com/css/default.asp" target="_blank"">CSS</a></li>
+                    <li class="cate_item"><a href="https://www.w3schools.com/php/default.asp" target="_blank"">PHP</a></li>
+                    <li class="cate_item"><a href="https://www.w3schools.com/sql/default.asp" target="_blank"">SQL</a></li>
+                </ul>
             </div>
-            <div class="item submit">
-                <button id="create-btn" onclick="handleCreateCourse()">Create</button>
+            <div class="main__courses">
+                <div class="main__course">
+                    <h2 class="course_title">Course 1</h2>
+                    <p class="course_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et officiis tempora molestias atque. Dignissimos corporis molestiae sequi quia blanditiis mollitia ullam similique ut maxime rem voluptate aperiam, fugit eligendi?</p>
+                </div>
+                <div class="main__course">
+                    <h2 class="course_title">Course 2</h2>
+                    <p class="course_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et officiis tempora molestias atque. Dignissimos corporis molestiae sequi quia blanditiis mollitia ullam similique ut maxime rem voluptate aperiam, fugit eligendi?</p>
+                </div>
+                <div class="main__course">
+                    <h2 class="course_title">Course 3</h2>
+                    <p class="course_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et officiis tempora molestias atque. Dignissimos corporis molestiae sequi quia blanditiis mollitia ullam similique ut maxime rem voluptate aperiam, fugit eligendi?</p>
+                </div>
+                <div class="main__course">
+                    <h2 class="course_title">Course 4</h2>
+                    <p class="course_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et officiis tempora molestias atque. Dignissimos corporis molestiae sequi quia blanditiis mollitia ullam similique ut maxime rem voluptate aperiam, fugit eligendi?</p>
+                </div>
             </div>
         </div>
     </div>
-    <script src="index.js"></script>
 </body>
 </html>
