--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="main">
         <a href="rest-api.html">Rest API</a>
         <a href="nav-bar.html">Nav bar</a>
-        <a href="grid.html">Grid</a>
+        <a href="grid.html">Ứng dụng thư viện Grid</a>
+        <a href="./grid-system/index.html">Ứng dụng Grid để tạo các layout trang web mẫu</a>
         <div class="main__product">
             <img class="main__product_img" src="./product.jpg" alt="hinh-anh-san-pham" />
             <div class="main__product_info">
